
	* NCO 4.9.6-alpha05 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.9.6-alpha05: Iliza';git push
	git tag -a 4.9.6-alpha05 -m 'ncclimo mdl_nm=MOSART, tpd %g, var_xtr; ncremap vrb_lvl=3; nco_s1d stubs';git push --tags

2020-11-27  Charlie Zender  <zender@uci.edu>

	* Create nco_s1d.[ch] files for handling sparse-1d packed (S1D) CLM/ELM variables

	* ncks add --sparse, --s1d option to unpack CLM/ELM variables

	* ncks perform Terraref attribute manipulation with nco_char_att_put()

	* ncclimo add var_xtr option for extra variables in each timeseries

2020-11-25  Charlie Zender  <zender@uci.edu>

	* ncclimo add MOSART to models that append area_nm variable to output unless --no_cll_msr is invoked

2020-11-20  Charlie Zender  <zender@uci.edu>

	* Add UDUNITS2_XML_FILE instructions as HINT to more run-time WARNINGs

	* ncremap add cmd_sng and completion time to vrb_lvl=3

2020-11-18  Charlie Zender  <zender@uci.edu>

	* Build on macOS 11

2020-11-13  Charlie Zender  <zender@uci.edu>

	* ncclimo infer tpd using %g not %f format

	* Quiet long filename warnings unless dbg >= 1

	* NCO 4.9.6-alpha04 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.9.6-alpha04: Osiris Rex';git push
	git tag -a 4.9.6-alpha04 -m 'all: bgr 64bit fix; ncremap fix esmf bug, mpi nd_fl bug, add cmem, msk_in, msk_out fix, UDUNITS2_XML_FILE hints;ncclimo cmem nodes';git push --tags

2020-11-11  Charlie Zender  <zender@uci.edu>

	* ncremap check for map-type by examining att_cnv_val, att_ttl_val, and att_gnr_val

	* ncremap fix bone-headed MPI indexing error on Cori

	* ncremap write node-file to drc_out not local directory

	* ncremap change default parallelism from Background to Serial

2020-11-03  Charlie Zender  <zender@uci.edu>

	* Clarify SDD and SCD distinction for ncclimo

2020-11-01  Charlie Zender  <zender@sastrugi.local>

	* Add UDUNITS2_XML_FILE instructions as HINT to run-time WARNING

2020-10-30  Charlie Zender  <zender@sastrugi.local>
